--- a/web/templates/web_user_add.tmpl
+++ b/web/templates/web_user_add.tmpl
@@ -1,11 +1,12 @@
-<html>
-<head>
-    <title>Add Web User</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container">
-        <h2>Add New Web User</h2>
+{{ template "header_auth" . }}
+<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item"><a href="/web_users">Web Users</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Add</li>
+  </ol>
+</nav>
+        <h2>{{ .Title }}</h2>
         <form action="/web_users/add" method="post">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
@@ -17,10 +18,8 @@
             </div>
             <div class="mb-3">
                 <label for="role" class="form-label">Role</label>
-                <input type="text" class="form-control" id="role" name="role" required>
+                <input type="text" class="form-control" id="role" name="role">
             </div>
             <button type="submit" class="btn btn-primary">Add User</button>
         </form>
-    </div>
-</body>
-</html>
+{{ template "footer" . }}
