--- a/web/templates/web_users.tmpl
+++ b/web/templates/web_users.tmpl
@@ -1,11 +1,12 @@
-<!-- web/templates/web_users.html -->
-<html>
-<head>
-    <title>Web Users</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container">
+{{ template "header_auth" . }}
+{{ template "js_timestamp_converter" . }}
+
+<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
+  </ol>
+</nav>
         <h2>Web Users</h2>
         <table class="table">
             <thead>
@@ -13,6 +14,7 @@
                     <th>ID</th>
                     <th>Username</th>
                     <th>Role</th>
+                    <th>Added</th>
                 </tr>
             </thead>
             <tbody>
@@ -21,11 +23,10 @@
                     <td>{{.ID}}</td>
                     <td>{{.Username}}</td>
                     <td>{{.Role}}</td>
+                    <td class="timestamp">{{.AddedTimestamp}}</td>
                 </tr>
                 {{end}}
             </tbody>
         </table>
         <a href="/web_users/add" class="btn btn-primary">Add New User</a>
-    </div>
-</body>
-</html>
+{{ template "footer" . }}
