web: added page: All Telegram Messages

--- a/web/templates/auth_main.tmpl
+++ b/web/templates/auth_main.tmpl
@@ -3,6 +3,6 @@
         <ul class="list-group">
             <li class="list-group-item"><a href="/web_users">Web Users</a></li>
             <li class="list-group-item"><a href="/tg_users">Telegram Users</a></li>
-            <!-- li class="list-group-item"><a href="/tg_msgs">Telegram Messages</a></li -->
+            <li class="list-group-item"><a href="/tg_msgs_all">All Telegram Messages</a></li>
         </ul>
 {{ template "footer" . }}
