--- a/web/templates/auth_main.tmpl
+++ b/web/templates/auth_main.tmpl
@@ -1,8 +1,35 @@
 {{ template "header_auth" . }}
 <h1>Main Menu</h1>
-        <ul class="list-group">
+<div class="col">
+    <h3>Web/Sys</h3>
+        <ul class="list-group mb-3">
             <li class="list-group-item"><a href="/web_users">Web Users</a></li>
+            <li class="list-group-item disabled" aria-disabled="true"><a href="#">Web Sessions</a></li>
+            <li class="list-group-item"><a href="/render_table/DbChanges">Db Changes</a></li>
+        </ul>
+</div>
+<div class="col">
+    <h3>Telegram</h3>
+        <ul class="list-group mb-3">
             <li class="list-group-item"><a href="/tg_users">Telegram Users</a></li>
             <li class="list-group-item"><a href="/tg_msgs_all">All Telegram Messages</a></li>
         </ul>
+</div>
+<div class="col">
+    <h3>Business</h3>
+    <h4>Data</h4>
+        <ul class="list-group mb-3">
+            <li class="list-group-item">Leftovers</li>
+            <li class="list-group-item">Sales</li>
+            <li class="list-group-item">Shifts</li>
+            <li class="list-group-item">Salaries</li>
+            <li class="list-group-item">???Bonuses</li>
+        </ul>
+    <h4>Lists</h4>
+        <ul class="list-group mb-3">
+            <li class="list-group-item">Employees</li>
+            <li class="list-group-item">Locations</li>
+            <li class="list-group-item">Products</li>
+        </ul>
+</div>
 {{ template "footer" . }}
