Added model.TgCbFlow & model.TgCbFlowList and also connected to auth_main.tmpl via renderModel

--- a/web/templates/auth_main.tmpl
+++ b/web/templates/auth_main.tmpl
@@ -2,6 +2,7 @@
 <h1>Main Menu</h1>
 <div class="col">
     <h3>Web/Sys</h3>
+    <h4>Data</h4>
         <ul class="list-group mb-3">
             <li class="list-group-item"><a href="/web_users">Web Users</a></li>
             <li class="list-group-item disabled" aria-disabled="true"><a href="#">Web Sessions</a></li>
@@ -10,9 +11,14 @@
 </div>
 <div class="col">
     <h3>Telegram</h3>
+    <h4>Data</h4>
         <ul class="list-group mb-3">
             <li class="list-group-item"><a href="/tg_users">Telegram Users</a></li>
             <li class="list-group-item"><a href="/tg_msgs_all">All Telegram Messages</a></li>
+        </ul>
+    <h4>ChatBot Config</h4>
+        <ul class="list-group mb-3">
+            <li class="list-group-item"><a href="/render_table/TgCbFlowList">Chat Flow List</a></li>
         </ul>
 </div>
 <div class="col">
