--- a/web/templates/auth_main.tmpl
+++ b/web/templates/auth_main.tmpl
@@ -5,7 +5,7 @@
     <h4>Data</h4>
         <ul class="list-group mb-3">
             <li class="list-group-item"><a href="/web_users">Web Users</a></li>
-            <li class="list-group-item disabled" aria-disabled="true"><a href="#">Web Sessions</a></li>
+            <li class="list-group-item"><a href="/render_table/WebSession">Web Sessions</a></li>
             <li class="list-group-item"><a href="/render_table/DbChanges">Db Changes</a></li>
         </ul>
 </div>
@@ -25,17 +25,17 @@
     <h3>Business</h3>
     <h4>Data</h4>
         <ul class="list-group mb-3">
-            <li class="list-group-item">Leftovers</li>
+            <li class="list-group-item"><a href="/render_table/SrvsLeftovers">Leftovers</a></li>
             <li class="list-group-item">Sales</li>
-            <li class="list-group-item">Shifts</li>
+            <li class="list-group-item"><a href="/render_table/SrvsShifts">Shifts</a></li>
             <li class="list-group-item">Salaries</li>
             <li class="list-group-item">???Bonuses</li>
         </ul>
     <h4>Lists</h4>
         <ul class="list-group mb-3">
-            <li class="list-group-item">Employees</li>
-            <li class="list-group-item">Locations</li>
-            <li class="list-group-item">Products</li>
+            <li class="list-group-item"><a href="/render_table/SrvsEmployeesList">Employees</a></li>
+            <li class="list-group-item"><a href="/render_table/SrvsLocationList">Locations</a></li>
+            <li class="list-group-item"><a href="/render_table/SrvsGoodsList">Goods</a></li>
         </ul>
 </div>
 {{ template "footer" . }}
