model TgUser +column SrvsEmployeesId

--- a/web/templates/tg_users.tmpl
+++ b/web/templates/tg_users.tmpl
@@ -148,6 +148,7 @@ function updateField(event, model, ID, field, value, displayValue, element) {
                     <th>IsBot</th>
                     <th>Chatbot</th>
                     <th>Chatbot Flow State</th>
+                    <th>Employee</th>
                     <th>Shift State</th>
                     <th>Added</th>
                 </tr>
@@ -181,6 +182,7 @@ Bot
 
                     </td>
                     <td>{{.TgCbFlowStepId}}</td>
+                    <td>{{.SrvsEmployeesId}}</td>
                     <td>{{.ShiftState}}</td>
                     <td class="timestamp">{{.AddedTimestamp}}</td>
                 </tr>
