web: lock update TgUser.SrvsEmployeesId if .IsBot

--- a/web/templates/tg_users.tmpl
+++ b/web/templates/tg_users.tmpl
@@ -204,12 +204,18 @@ Bot
                     <td>{{.TgCbFlowStepId}}</td>
                     <td>
 
+{{ if .IsBot }}
+Bot
+{{ else }}
+
 <select name="SrvsEmployees" class="SrvsEmployees" tgUserId="{{.ID}}" SrvsEmployeesId="{{.SrvsEmployeesId}}" style="display: none;">
   <option value="0">none</option>
 {{ range $.srvsEmployeesList }}
   <option value="{{ .ID }}">{{.Name}}</option>
 {{ end }}
 </select>
+
+{{ end }}
 
                     </td>
                     <td>{{.ShiftState}}</td>
