added new functionality to render_model_table.go: adding records with RenderAddForm() and HandleRenderTableAddRecord(), and also improved loadModelConfig()

--- a/web/templates/tg_users.tmpl
+++ b/web/templates/tg_users.tmpl
@@ -2,7 +2,7 @@
 {{ template "js_timestamp_converter" . }}
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="/static/tbl_update_fld.js"></script>
+<script src="/static/js/tbl_update_fld.js"></script>
 <script>
 function updateField(event, model, ID, field, value, displayValue, element) {
     const anim_time = 500; //ms
