--- a/web/templates/tg_msgs_all.tmpl
+++ b/web/templates/tg_msgs_all.tmpl
@@ -26,7 +26,7 @@
                     <!-- td>{{.TgUserID}}</td -->
                     <td>{{.UserName}}</td>
                     <!-- td>{{.ChatID}}</td -->
-                    <td>{{.Text}}</td>
+                    <td style="white-space: pre;">{{.Text}}</td>
                     <td class="timestamp">{{.Date}}</td>
                     <td class="timestamp">{{.AddedTimestamp}}</td>
                 </tr>
